--- a/test.cbp
+++ b/test.cbp
@@ -26,6 +26,8 @@
 			<Add library="kernel32" />
 			<Add library="comctl32" />
 		</Linker>
+		<Unit filename="controller.cpp" />
+		<Unit filename="controller.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="menu.h" />
 		<Unit filename="menu.rc">
